# ministral-3b-web

./: .env.example  .gitignore  PROMPT_MEMORY.md  README.md  how_to_import_ai_conversation.md  package-lock.json  vite.config.ts
src/: app.d.ts
src/lib/: analysis_prompt.txt  ministral.ts  prompts.ts
src/routes/: +page.svelte
training/: README.md  build_candidates_10k.py  build_v1_dataset.py  build_v2_from_teacher.py  evaluate.py  export_onnx_and_push_hf.py  label_with_mistral_teacher.py  pyproject.toml  run_local_teacher_pipeline.py  train_q_lora.py
