[project]
name = "training"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "accelerate",
    "bitsandbytes",
    "datasets>=2.18",
    "mistralai>=1.12.4",
    "peft",
    "sentencepiece>=0.2.1",
    "torch",
    "transformers",
    "trl",
]
